--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:WindowedApplication
-		title="{LanguageManager.sentences.app_title}{ContextManager.templates.length &amp;&amp; ContextManager.templates.getItemAt(0).file ? ' - '+ContextManager.templates.getItemAt(0).file.nativePath : ''} - {ContextManager.templates.length &amp;&amp; ContextManager.templates.getItemAt(0).name ? ContextManager.templates.getItemAt(0).name : LanguageManager.sentences.noname}{ContextManager.templates.length &amp;&amp; ContextManager.templates.getItemAt(0).modified ? '*' : ''}"
+		title="{LanguageManager.sentences.app_title} - {selectedTemplateProject &amp;&amp; selectedTemplateProject.name ? selectedTemplateProject.name : LanguageManager.sentences.noname} - {MenuGeneral.state == MenuGeneral.STATE_MOD ? '*' : ''}"
 		titleIcon="@Embed(source='assets/icons/icon_16.png')"
 		layout="absolute"
 		statusBarFactory="net.vdombox.powerpack.customize.core.windowClasses.SuperStatusBar"
@@ -16,7 +16,7 @@
 		xmlns:containers="net.vdombox.powerpack.lib.extendedapi.containers.*"
 		closing="closingApplicationHandler(event)"
 		styleName="builderWindowStyle" 
-		xmlns:customize1="net.vdombox.powerpack.lib.player.customize.*">
+		xmlns:customize1="net.vdombox.powerpack.lib.player.customize.*" xmlns:control="net.vdombox.powerpack.control.*">
 
 	<mx:Style source="assets/style/style.css" />
 	
@@ -90,6 +90,7 @@
 			import mx.controls.Tree;
 			import mx.core.Application;
 			import mx.events.CloseEvent;
+			import mx.events.DropdownEvent;
 			import mx.events.FlexEvent;
 			import mx.events.FlexNativeMenuEvent;
 			import mx.utils.StringUtil;
@@ -101,8 +102,8 @@
 			import net.vdombox.powerpack.dialog.Import;
 			import net.vdombox.powerpack.dialog.ImportFromTpl;
 			import net.vdombox.powerpack.dialog.ModalDialog;
+			import net.vdombox.powerpack.dialog.ProjectsSettingsDialog;
 			import net.vdombox.powerpack.dialog.TemplateKey;
-			import net.vdombox.powerpack.dialog.TemplateProperties;
 			import net.vdombox.powerpack.dialog.ValidateDialog;
 			import net.vdombox.powerpack.graph.Connector;
 			import net.vdombox.powerpack.graph.GraphCanvas;
@@ -124,11 +125,14 @@
 			import net.vdombox.powerpack.lib.player.managers.ContextManager;
 			import net.vdombox.powerpack.lib.player.managers.LanguageManager;
 			import net.vdombox.powerpack.lib.player.popup.AlertPopup;
+			import net.vdombox.powerpack.lib.player.template.TemplateProject;
 			import net.vdombox.powerpack.managers.BuilderContextManager;
 			import net.vdombox.powerpack.managers.CashManager;
 			import net.vdombox.powerpack.managers.ProgressManager;
 			import net.vdombox.powerpack.menu.MenuGeneral;
 			import net.vdombox.powerpack.panel.Console;
+			import net.vdombox.powerpack.template.BuilderTemplate;
+			import net.vdombox.powerpack.template.BuilderTemplateProject;
 			import net.vdombox.powerpack.updater.BuilderUpdater;
 			import net.vdombox.powerpack.utils.LibLoader;
 
@@ -478,7 +482,7 @@
 			{
 				if ( event.target.txtKey.text )
 				{
-					currentTemplate.key = event.target.txtKey.text;
+					selectedTemplateProject.key = event.target.txtKey.text;
 
 					ProgressManager.start( ProgressManager.DIALOG_MODE, false );
 
@@ -580,11 +584,11 @@
 					break;
 
 				case "properties":
-					TemplateProperties.show( onTemplatePropertiesClose );
+					ProjectsSettingsDialog.show( Graphs.graphs, onProjectsSettingsDialogClose );
 					break;
 				
 				case "air_builder":
-					AirBuildProperties.show(pnl_graphs.toXML());
+					AirBuildProperties.show(onTemplateBuildPropertiesClose);
 					break;
 
 				case "about_program":
@@ -604,9 +608,7 @@
 						if ( ContextManager.templateStruct )
 							ContextManager.templateStruct.terminated = true;
 	
-						ContextManager.templateStruct = new TemplateStruct(
-								pnl_graphs.toXML(),
-								(ContextManager.templates.getItemAt( 0 ) as BuilderTemplate).fullID );
+						ContextManager.templateStruct = new TemplateStruct( pnl_graphs.toXML(), currentTemplate.selectedProject.initialGraphName);
 	
 						switch ( menuItem.name )
 						{
@@ -725,48 +727,27 @@
 
 		}
 
-			public function get currentTemplate() : BuilderTemplate
-			{
-				if ( !ContextManager.templates || ContextManager.templates.length == 0 )
-					return null;
-				
-				return ContextManager.templates.getItemAt( 0 ) as BuilderTemplate;
-			}
-
-		private function onTemplatePropertiesClose( event : CloseEvent ) : void
+		public function get currentTemplate() : BuilderTemplate
 		{
-			if ( !currentTemplate )
-				return;
+			if ( !ContextManager.templates || ContextManager.templates.length == 0 )
+				return null;
+			
+			return ContextManager.templates.getItemAt( 0 ) as BuilderTemplate;
+		}
 
+		private function onTemplateBuildPropertiesClose( event : CloseEvent ) : void
+		{
 			if ( event.detail == ModalDialog.OK )
 			{
-
-				var propDlg : TemplateProperties = event.target as TemplateProperties;
-
-				currentTemplate.name = propDlg.templateName;
-				currentTemplate.installerId = propDlg.templateInstallerId;
-				currentTemplate.description = propDlg.templateDescription;
-
-				if (propDlg.templatePicturePath)
-				{
-					var templatePictureFile : File = new File( propDlg.templatePicturePath );
-
-					currentTemplate.pictureFile = FileUtils.correctImageFile( templatePictureFile ) ? templatePictureFile : null;
-				} 
-				else if (propDlg.templateB64Picture)
-				{
-					currentTemplate.b64picture = propDlg.templateB64Picture; 
-				} else
-				{
-					currentTemplate.pictureFile = null;
-					currentTemplate.b64picture = null;
-				}
-
-				currentTemplate.key = propDlg.templateKey;
-
 				templateChanged();
 			}
 
+		}
+		
+		private function onProjectsSettingsDialogClose( event : CloseEvent ) : void
+		{
+			if ( event.detail == ModalDialog.OK )
+				templateChanged();
 		}
 
 		private function onValidate( event : CloseEvent ) : void
@@ -786,7 +767,7 @@
 					if ( dialog.chkNames )	 flags |= TemplateValidateOptions.SET_UNIQ_NAMES;
 				}
 
-				ContextManager.templateStruct = new TemplateStruct( currentTemplate.xmlStructure, currentTemplate.fullID );
+				ContextManager.templateStruct = new TemplateStruct( currentTemplate.xmlStructure, currentTemplate.selectedProject.initialGraphName );
 
 				var validateArr : Array = ContextManager.templateStruct.validate( flags ).array;
 
@@ -1222,27 +1203,30 @@
 		
 		protected function creationCompleteHandler(event:FlexEvent):void
 		{
-			trace ("111");
 			addEventListener("closeWithoutSave", closeWithoutSaveHandler);
 
 			checkUpdate();
 		}
 				
+		private function get selectedTemplateProject () : BuilderTemplateProject
+		{
+			return currentTemplate.selectedProject as BuilderTemplateProject;
+		}
+		
+		
 		]]>
 	</mx:Script>
+	
 	<mx:VBox width="100%" height="100%">
 
-		<!--mx:MenuBar width="100%"
-				dataProvider="{fileMenuData}"
-				labelField="@label"
-				showRoot="false"
-				itemClick="menuHandler(event);">
-			</mx:MenuBar-->
-
+		<control:PowerPackControlBar />
+		
+		<mx:HRule width="100%" />
+		
 		<containers:Docker>
 
 			<mx:VBox width="100%" height="100%" id="workStage" visible="true" includeInLayout="true">
-
+				
 				<mx:HDividedBox height="100%" width="100%">
 
 					<panel:Graphs creationIndex="2"
