--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/AirBuildProperties.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/AirBuildProperties.mxml
@@ -19,26 +19,26 @@
 			import mx.events.ItemClickEvent;
 			import mx.utils.StringUtil;
 			
-			import net.vdombox.powerpack.BuilderTemplate;
 			import net.vdombox.powerpack.lib.extendedapi.controls.LinkObject;
 			import net.vdombox.powerpack.lib.extendedapi.utils.FileUtils;
-			import net.vdombox.powerpack.lib.player.Template;
 			import net.vdombox.powerpack.lib.player.managers.ContextManager;
 			import net.vdombox.powerpack.lib.player.popup.AlertPopup;
+			import net.vdombox.powerpack.lib.player.template.Template;
+			import net.vdombox.powerpack.lib.player.template.TemplateProject;
+			import net.vdombox.powerpack.lib.player.template.VDOMApplication;
 			import net.vdombox.powerpack.managers.ProgressManager;
 			import net.vdombox.powerpack.sdkcompiler.SDKCompiler;
 			import net.vdombox.powerpack.sdkcompiler.SDKCompilerCreator;
 			import net.vdombox.powerpack.sdkcompiler.SDKCompilerEvent;
 			import net.vdombox.powerpack.sdkcompiler.SDKCompilerParamsChecker;
-			import net.vdombox.powerpack.sdkcompiler.VDOMApplication;
+			import net.vdombox.powerpack.template.BuilderTemplate;
+			import net.vdombox.powerpack.template.BuilderTemplateProject;
 			
-			private var compilerParamsChecker	: SDKCompilerParamsChecker = new SDKCompilerParamsChecker();
+			private var compilerParamsChecker	: SDKCompilerParamsChecker = SDKCompilerParamsChecker.getInstance();
 			
 			private var shObject : SharedObject = SharedObject.getLocal( "air_properties" );
 			
 			private static var _dialog	: AirBuildProperties;
-			
-			public var templateStructure : XML;
 			
 			private var installerTplXml : XML = 
 				 <application xmlns="http://ns.adobe.com/air/application/2.0">
@@ -68,32 +68,8 @@
 			
 			private  function onShow():void
 			{
-				initOutputFolderPath();
-				initInstallerFileName();
-				initAppPath();
 				initFlexSDK_4_1_Path();
 				initAirSDKLinuxPath();
-			}
-			
-			private function initOutputFolderPath():void
-			{
-				outputInstallerFolderBrowseBox.path = curTemplateOutputInstallerFolder;
-				
-				validateOutputInstallerFolderPath();
-			}
-			
-			private function initInstallerFileName():void
-			{
-				installerFileName.text = curTemplateInstallerFileName;
-				
-				validateInstallerFileName();
-			}
-
-			private function initAppPath():void
-			{
-				installerApplicationBrowseBox.path = currentTemplate ? currentTemplate.installerAppPath : Template.DEFAULT_APP_PATH;
-				
-				validateAppPath();
 			}
 			
 			private function initFlexSDK_4_1_Path():void
@@ -112,50 +88,13 @@
 				validateAirSDKPath();
 			}
 			
-			private function get curTemplateInstallerFileName() : String
-			{
-				if (!currentTemplate)
-					return Template.DEFAULT_OUTPUT_FILE_NAME;
-				
-				if (!currentTemplate.installerFileName)
-				{
-					if (!currentTemplate.installerId)
-						return Template.DEFAULT_OUTPUT_FILE_NAME;
-					
-					return currentTemplate.installerId;
-				}
-				
-				return currentTemplate.installerFileName;
-			}
-			
-			private function get curTemplateOutputInstallerFolder() : String
-			{
-				if (!currentTemplate)
-					return BuilderTemplate.DEFAULT_OUTPUT_FOLDER;
-					
-				var outputFolderPath : String = currentTemplate.installerFolderPath;
-				
-				if (!FileUtils.filePathExists(outputFolderPath, true))
-					outputFolderPath = BuilderTemplate.DEFAULT_OUTPUT_FOLDER;
-					
-				return currentTemplate.installerFolderPath;
-				
-			}
-			
-			private function get outputFileName () : String
-			{
-				return StringUtil.trim(installerFileName.text);
-			}
-			
-			static public function show( templateXmlStructure : XML, closeHandler : Function = null ) : AirBuildProperties
+			static public function show( closeHandler : Function = null ) : AirBuildProperties
 			{
 				
 				
 				if ( !_dialog || _dialog.closed )
 				{
 					_dialog = new AirBuildProperties();
-					
-					_dialog.templateStructure = templateXmlStructure;
 					
 					_dialog.open();
 					_dialog.show( OK | CANCEL, closeHandler, null, OK );
@@ -206,17 +145,13 @@
 				return ContextManager.templates.getItemAt( 0 ) as BuilderTemplate;
 			}
 			
+			private function get selectedBuilderProject () : BuilderTemplateProject
+			{
+				return currentTemplate.selectedProject as BuilderTemplateProject
+			}
+			
 			private function setTemplateBuildProperties () : void
 			{
-				if (!currentTemplate)
-					return;
-				
-				currentTemplate.xmlStructure = templateStructure;
-				
-				currentTemplate.installerAppPath = installerApplicationBrowseBox.path;
-				currentTemplate.installerFolderPath = outputInstallerFolderBrowseBox.path;
-				currentTemplate.installerFileName = outputFileName;
-				
 				shObject.data["flex_sdk_4_1"] = flexSDK_4_1_BrowseBox.path;
 				
 				if (useLinuxSDK)
@@ -270,7 +205,7 @@
 				
 				var app : VDOMApplication = new VDOMApplication();
 				app.stored = prepareInstallerApp();
-				app.fileName = FileUtils.getFileName(installerApplicationBrowseBox.path);
+				app.path = BuilderTemplateProject(currentTemplate.selectedProject).embededAppPath;
 				
 				if (!installerPropertiesXmlPrepeared)
 				{
@@ -290,8 +225,8 @@
 				ProgressManager.source = null;
 				ProgressManager.start( ProgressManager.DIALOG_MODE, false );
 				
-				sdkCompiler.buildInstallerPackage (outputInstallerFolderBrowseBox.path, 
-													outputFileName, 
+				sdkCompiler.buildInstallerPackage ( BuilderTemplateProject(currentTemplate.selectedProject).outputFolderPath, 
+													BuilderTemplateProject(currentTemplate.selectedProject).outputFileName, 
 													app, 
 													flexSDK_4_1_BrowseBox.path,
 													airSDKLinuxBrowseBox.path,
@@ -313,14 +248,16 @@
 			
 			private function prepareInstallerApp() : Boolean
 			{
-				if (!installerApplicationBrowseBox.path || !validAppPath)
+				var embededAppPath : String = BuilderTemplateProject(currentTemplate.selectedProject).embededAppPath;
+				
+				if (!embededAppPath || !validAppPath)
 					return false;
 				
 				try
 				{
-					var sourceAppFile : File = new File(installerApplicationBrowseBox.path);
+					var sourceAppFile : File = new File(embededAppPath);
 					
-					var targetAppFile : File = File.applicationStorageDirectory.resolvePath(FileUtils.getFileName(installerApplicationBrowseBox.path));
+					var targetAppFile : File = File.applicationStorageDirectory.resolvePath(FileUtils.getFileName(embededAppPath));
 					
 					sourceAppFile.copyTo(targetAppFile, true);
 				}
@@ -346,9 +283,9 @@
 				{
 					installerXML = installerTplXml;
 					
-					installerXML.id = "net.vdom." + currentTemplate.installerId;
-					installerXML.name = currentTemplate.name;
-					installerXML.filename = currentTemplate.name;
+					installerXML.id = "net.vdom." + selectedBuilderProject.installerId;
+					installerXML.name = selectedBuilderProject.name;
+					installerXML.filename = selectedBuilderProject.name;
 					
 					installerXML.normalize();
 					
@@ -371,47 +308,32 @@
 				saveTemplate();
 			}
 			
-			private function validateOutputInstallerFolderPath():void
+			private function validateFlexSDKPath():void
 			{
-				outputInstallerFolderBrowseBox.errorString = validOutputInstallerFolderPath ? null : "Error";
-				
-				buildBtn.enabled = buildAvailable;
-			}
-			
-			private function get validOutputInstallerFolderPath () : Boolean
-			{
-				return FileUtils.filePathExists(outputInstallerFolderBrowseBox.path, true);
-			}
-			
-			private function validateInstallerFileName():void
-			{
-				installerFileName.errorString = validInstallerFileName ? null : "Error";
-				
-				buildBtn.enabled = buildAvailable;
-			}
-			
-			private function get validInstallerFileName () : Boolean
-			{
-				return outputFileName != "";
-			}
-			
-			private function validateAppPath():void
-			{
-				installerApplicationBrowseBox.errorString = validAppPath ? null : "Error";
+				flexSDK_4_1_BrowseBox.errorString = validFlexSDKPath ? null : "Error";
 				
 				buildBtn.enabled = buildAvailable;
 			}
 			
 			private function get validAppPath () : Boolean
 			{
-				return compilerParamsChecker.isAppPathValid(installerApplicationBrowseBox.path);
+				var embededAppPath : String = BuilderTemplateProject(currentTemplate.selectedProject).embededAppPath;
+				
+				return compilerParamsChecker.isAppPathValid(embededAppPath);
 			}
 			
-			private function validateFlexSDKPath():void
+			private function get validOutputInstallerFolderPath () : Boolean
 			{
-				flexSDK_4_1_BrowseBox.errorString = validFlexSDKPath ? null : "Error";
+				var outputFolderPath : String = BuilderTemplateProject(currentTemplate.selectedProject).outputFolderPath;
 				
-				buildBtn.enabled = buildAvailable;
+				return compilerParamsChecker.isValidInstallerOutputFolderPath(outputFolderPath);
+			}
+			
+			private function get validInstallerFileName () : Boolean
+			{
+				var outputFileName : String = BuilderTemplateProject(currentTemplate.selectedProject).outputFileName;
+				
+				return compilerParamsChecker.isValidInstallerFileName(outputFileName);
 			}
 			
 			private function get validFlexSDKPath () : Boolean
@@ -508,38 +430,6 @@
 			<mx:HRule width="100%" />
 			<mx:Spacer height="20"/>
 		</mx:VBox>
-			 
-		<mx:HBox width="450" horizontalGap="3">
-			<mx:Label text="Output folder: " width="115"/>
-			<controls:FileBrowseBox id="outputInstallerFolderBrowseBox"
-									mode="{FileBrowseBox.MODE_DIR}"
-									browseTitle="Select output folder"
-									defaultPath="{File.desktopDirectory.nativePath}"
-									change="validateOutputInstallerFolderPath()"
-									select="validateOutputInstallerFolderPath()"
-									width="100%"/>
-		</mx:HBox>
-		
-		<mx:HBox width="450" horizontalGap="3">
-			<mx:Label text="Output file name: " width="115"/>
-			<mx:TextInput id="installerFileName" 
-						  width="100%" 
-						  restrict="a-zA-z0-9 \-_.()" 
-						  toolTip="{installerFileName.text}"
-						  change="validateInstallerFileName()"/>
-			<mx:Spacer width="70"/>
-		</mx:HBox>
-		
-		<mx:HBox width="450" horizontalGap="3">
-			<mx:Label text="Embeded application: " width="115"/>
-			<controls:FileBrowseBox id="installerApplicationBrowseBox"
-									mode="{FileBrowseBox.MODE_OPEN}"
-									defaultPath="{File.desktopDirectory.nativePath}"
-									change="validateAppPath()"
-									select="validateAppPath()"
-									width="100%"
-									filterArray="{[new FileFilter('Application XML', '*.xml')]}"/>
-		</mx:HBox>
 		
 		<mx:HBox width="450" horizontalGap="3">
 			<mx:Label text="Flex SDK 4.1.0: " width="115"/>
