--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/Import.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/Import.mxml
@@ -21,7 +21,7 @@
 			
 			import net.vdombox.powerpack.importation.ImportApp;
 			import net.vdombox.powerpack.lib.extendedapi.utils.FileUtils;
-			import net.vdombox.powerpack.lib.player.Template;
+			import net.vdombox.powerpack.lib.player.template.Template;
 			import net.vdombox.powerpack.lib.player.managers.ContextManager;
 			import net.vdombox.powerpack.lib.player.managers.LanguageManager;
 			import net.vdombox.powerpack.lib.player.popup.AlertPopup;
