--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/graphsClasses/AccordionChild.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/graphsClasses/AccordionChild.mxml
@@ -15,6 +15,7 @@
 			import mx.events.ListEvent;
 			import mx.events.ListEventReason;
 			
+			import net.vdombox.powerpack.graph.GraphCanvas;
 			import net.vdombox.powerpack.lib.player.gen.parse.CodeParser;
 			import net.vdombox.powerpack.lib.player.managers.LanguageManager;
 
@@ -133,13 +134,16 @@
 		{
 			editedItemRenderer.data.name = _newGraphName;
 
+			var evnt : GraphsAccordionEvent = new GraphsAccordionEvent( GraphsAccordionEvent.GRAPH_VALUE_EDITING_COMPLETE );
+			evnt.graph = editedItemRenderer.data as GraphCanvas;
+			
 			destroyListItemEditor();
 
 			lstGraphs.dataProvider.notifyItemUpdate( editedItemRenderer );
 			
 			onGraphsChange(null);
 
-			var evnt : GraphsAccordionEvent = new GraphsAccordionEvent( GraphsAccordionEvent.GRAPH_VALUE_EDITING_COMPLETE );
+			
 			lstGraphs.dispatchEvent( evnt );
 		}
 
