hide "Exit" button in web version
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7984 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/Player/WebInstaller/src/WebInstaller.mxml
+++ b/PowerPack/v.01/Player/WebInstaller/src/WebInstaller.mxml
@@ -13,7 +13,9 @@
 		<![CDATA[
 			import mx.controls.Alert;
 			import mx.events.FlexEvent;
-
+			
+			import net.vdombox.powerpack.lib.extendedapi.utils.Utils;
+			
 			private static var POST_ADDRESS:String = "template.xml";
 //			private static var POST_ADDRESS:String = "http://192.168.0.201/API.vdom?id=14";
 //			d:\FlexProjects\PowerPack\WebInstaller\src\template.xml 
@@ -54,7 +56,7 @@
 		}
 		]]>
 	</mx:Script>
-	<player:Player id="player"/>
+	<player:Player id="player" isDescktopApplication="false"/>
 	
 	
 	
