hide "Exit" button in web version
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7986 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/Installer.mxml
+++ b/PowerPack/v.01/PowerPack/src/Installer.mxml
@@ -150,7 +150,8 @@
 		]]></mx:Script>
 	
 	<!-- WEB player (new, not full functionality)-->
-	<player:Player id="player"  close="nativeWindow.close()" />
+	<player:Player id="player"  close="nativeWindow.close()" isDesktopApplication="true"/>
+	
 	<mx:HBox right="14" y="17"
 			 height="10" width="100%"
 			 verticalAlign="bottom" horizontalAlign="right"
