first player view (empty)
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7988 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/Player.mxml
+++ b/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/Player.mxml
@@ -222,6 +222,7 @@
 				case cKeyRequest:
 					vsProcess.selectedChild = cKeyRequest;
 					break;
+				
 				case cGeneral:
 					vsProcess.selectedChild = cGeneral;
 					btnRun.setFocus ();
@@ -233,6 +234,10 @@
 
 				case cFinal:
 					vsProcess.selectedChild = cFinal;
+					break;
+				
+				default:
+					vsProcess.selectedChild = cEmpty;
 					break;
 			}
 		}
@@ -430,7 +435,13 @@
 
 		<mx:ViewStack id="vsProcess"
 					  width="100%" height="100%"
-					  creationPolicy="all" change="vsChange(event)" paddingTop="0">
+					  creationPolicy="all" 
+					  change="vsChange(event)" 
+					  paddingTop="0">
+
+			<mx:Canvas id="cEmpty"
+					   width="100%"
+					   showEffect="{canvasShow}" hideEffect="{canvasHide}"/>
 
 			<mx:Canvas id="cKeyRequest"
 					   width="100%"
