--- a/PowerPack/v.01/Player/WebInstaller/src/WebInstaller.mxml
+++ b/PowerPack/v.01/Player/WebInstaller/src/WebInstaller.mxml
@@ -15,6 +15,8 @@
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.powerpack.lib.extendedapi.utils.Utils;
+			import net.vdombox.powerpack.lib.player.managers.LanguageManager;
+			import net.vdombox.powerpack.lib.player.popup.AlertPopup;
 			
 			private static var POST_ADDRESS:String = "template.xml";
 //			private static var POST_ADDRESS:String = "http://192.168.0.201/API.vdom?id=14";
@@ -39,20 +41,22 @@
  
 			// Add Handlers
 			loader.addEventListener ( Event.COMPLETE, on_complete );
+			loader.addEventListener ( IOErrorEvent.IO_ERROR, on_error );
+			loader.addEventListener ( SecurityErrorEvent.SECURITY_ERROR, on_error );
 			loader.load ( request );
 			
 //			var p1 : String = Application.application.parameters.param1;
 			
 		}
 
+		private function on_error( evt:Event ):void
+		{
+			AlertPopup.show( LanguageManager.sentences['msg_not_valid_tpl_file'],  LanguageManager.sentences['error']);
+		}
+			
 		private function on_complete( evt:Event ):void
 		{
-			// do your stuff here
-//				trace (evt.target.data);
-//			Alert.show(evt.target.data );
 			player.dataProvider = new XML ( evt.target.data );
-
-
 		}
 		]]>
 	</mx:Script>
